	 (Stuart).
20071202 man/fuse.1: cleanups (Stuart).
20071203 ay.c,disk/{beta.c,plusd.c,wd_fdc.c},divide.c,if1.c,if2.c,joystick.c,
         memory.c,module.[ch],printer.c,profile.c,scld.c,simpleide.c,slt.c,
         snapshot.c,ula.c,z80/z80.c,zxatasp.c,zxcf.c: separate enabling of
         hardware in snapshots from the main snapshot load code so that
         peripherals are enabled when the machine and module reset functions
         are called - fixes loading snapshots with the +D paged in (thanks,
         Jonathan Needle for test +D szx snapshots) (Fred).
20071203 ay.c: add #include <string.h> for memset prototype (Fred).
20071203 sound/alsasound.c: increase NUM_FRAMES to avoid buffer underruns
	 (Stuart).
20071203 sound/alsasound.c: set avail_min to 1/2 of period_size and fix
	 reading of ALSA options (fixes bug #1750603) (Gergely Szasz).
20071203 if1.c: rename IN and WP to MDR_IN and MDR_WP (avoids warnings
	 under Win32) (Stuart).
20071203 input.c,ui/sdl/sdlui.c: pause emulation while displaying the exit
	 dialog (Stuart).
20071203 ui/win32,ui/win32/{Makefile.am,icons}: ignore generated files and
	 distribute icons directory (Stuart).
20071203 ui/win32/win32ui.c: implement pausing (Stuart).
20071204 disk/plusd.c: use MEMORY_PAGE_SIZE define (Fred).
20071204 disk/beta.[ch]: remove unused function (Stuart).
20071204 disk/beta.[ch],machines/{pentagon.c,pentagon1024.c,pentagon512.c,
	 scorpion.c,spec128.c,specplus2.c},periph.[ch],settings.dat,
	 ui/options.dat,ui.c: allow the Beta 128 interface to be used with the
	 128K and +2 machines (feature request #1541506) (Stuart).
20071204 man/fuse.1: document the 128K/+2 Beta 128 support (Stuart).
20071204 man/fuse.1: rearrange Interface I TODO items (Stuart).
20071204 man/fuse.1: mention +D and 128K/+2 Beta 128 support in the "Media,
	 Disk" section (Stuart).
20071205 machines/{specplus2a.c,specplus3.c}: Interface 1 doesn't work on the
         +2A and +3 (Fred).